@@ -23,6 +23,11 @@
 #include <stdio.h>
 #include <stdint.h>
 #include "define.h"
+#include <map>
+#include <string>
+
+typedef std::map<std::string,std::string> TGMConf;
+extern TGMConf GMConf;
 //保存的最大历史局面数
 //save the max number of history chess station
 const int MAX_COUNT=512;
